<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1A237E"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView android:text="@string/title" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:textColor="#f8ffffff"
            android:paddingTop="15dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_weight="0.96"
        android:paddingTop="22dp">

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="#f08c35" />

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#f08c35"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#f08c35" />

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:background="#f08c35"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:background="#f08c35"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:background="#b1321a"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff" />
    </LinearLayout>


    </LinearLayout>






